# ME-Frp_Desktop_unoffical

./: README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-linux.yml  build-windows.yml
scripts/: upload_to_cos.py
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: About.vue  CreateTunnel.vue  Dashboard.vue  HelpCenter.vue  Login.vue  Settings.vue  Sidebar.vue  TunnelConfig.vue  TunnelManagement.vue
src/types/: config.ts
